--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,9 @@ node {
          }
    stage('Build') {
       // Run the maven build
+      configFileProvider([configFile(fileId: 'sample_file', targetLocation: '/opt/')]) {
        sh "'/mnt/apache-maven-3.3.9/bin/mvn' -Dmaven.test.failure.ignore clean package"
+   }
    }
    stage('Results') {
       junit '**/target/surefire-reports/TEST-*.xml'
